# distributed-computing

./: .gitignore
task1/: Makefile  main
task1/include/: self.h
task1/src/: ipc.c  main.c  self.c
task2/: Makefile
task2/include/: child.h  logs.h  messager.h  self.h
task2/pa2/: Makefile  bank_robbery.c  banking.c  child.c  child.h  ipc.c  main  messager.c  run.sh  self.h
task2/src/: banking.c  child.c  ipc.c  logs.c  main.c  messager.c  self.c
task3/pa3/: Makefile  connections.c  main.c  main.h  run.sh  util.c  util.h
task4/pa4/: CMakeLists.txt  Makefile  banking.c  child.c  ipc.c  ipc2.h  logs.c  main  main.c  pa23.c
task6/pa6/: connections.c  connections.h  ipc.c  main.c  main.h  pa6.h  run.sh  util.h
task6/pa6.1/: connections.c  connections.h  main  main.c  main.h  util.h
